--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -13,8 +13,7 @@
           <h1 class="display-4 mb-4">
             Finding Your Student Accommodation Just Got Easy
           </h1>
-          <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae quas, asperiores eveniet vel nostrum magnam
-            voluptatum tempore! Consectetur, id commodi!</p>
+          <p class="lead">Customise your search criteria by using the fields below, allowing you to specify your personal preferences and what you are looking for in a property!</p>
           <div class="search">
             <form action="{% url 'search' %}">
               <!-- Form Row 1 -->
@@ -140,22 +139,19 @@
           <i class="fas fa-comment fa-4x mr-4"></i>
           <hr>
           <h3>Consulting Services</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt, debitis nam! Repudiandae, provident iste consequatur
-            hic dignissimos ratione ea quae.</p>
+          <p>We currently offer free expert consulting advice about a wide range of general matters, going the extra mile for you!</p>
         </div>
         <div class="col-md-4">
           <i class="fas fa-home fa-4x mr-4"></i>
           <hr>
           <h3>Propery Management</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt, debitis nam! Repudiandae, provident iste consequatur
-            hic dignissimos ratione ea quae.</p>
+          <p>Collectively, our advisors hold a plethora of experience within the property industry, allowing us to ensure you receive exactly what you are looking for in your student property!</p>
         </div>
         <div class="col-md-4">
           <i class="fas fa-suitcase fa-4x mr-4"></i>
           <hr>
-          <h3>Renting & Selling</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt, debitis nam! Repudiandae, provident iste consequatur
-            hic dignissimos ratione ea quae.</p>
+          <h3>Travel Advice</h3>
+          <p>Our experts will provide you with advice to ensure your travel around the city of Bath is efficient and well informed, whatever your intended destination!</p>
         </div>
       </div>
     </div>
