--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,9 @@
 <html lang="en">
 
 <head>
+        <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+        <meta content="utf-8" http-equiv="encoding">
+    <!-- Added above-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
