--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -10,7 +10,7 @@
       <div class="row text-center">
         <div class="col-md-12">
           <h1 class="display-4">About Bath Student Homes</h1>
-          <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt, pariatur!</p>
+          <p class="lead">Find information about us and how we can assist you here!</p>
         </div>
       </div>
     </div>
