Submission Commit - Partial Colours Changed

--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -36,11 +36,9 @@
       <div class="row">
         <div class="col-md-8">
           <h2>We Search For Your Perfect Student Home</h2>
-          <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt, pariatur!</p>
+          <p class="lead">Here at Bath Student Homes, we follow a set process to ensure you receive the best chances of attaining your perfect student home!</p>
           <img src="{% static 'img/about.jpg'%}" alt="">
-          <p class="mt-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis esse officia repudiandae ad saepe ex, amet
-            neque quod accusamus rem quia magnam magni dolorum facilis ullam minima perferendis? Exercitationem at quaerat
-            commodi id libero eveniet harum perferendis laborum molestias quia.</p>
+          <p class="mt-4">The combination of our adept local knowledge and knowledge of educational instituions and establishments has enabled us to perform an effective service for any student currently looking for accommodation within the Bath and North East Somerset Area, the process allows us to gather information about the students situation and preferences, such as their chosen educational establishment and living preferences (i.e parking required), before liasing with one of our well established contacts to arrange a viewing for the student and land them their ultimate property!</p>
         </div>
         <div class="col-md-4">
           {% if mvp_advisors %}
@@ -64,7 +62,7 @@
   <!-- Work -->
   <section id="work" class="bg-dark text-white text-center">
     <h2 class="display-4">We Work For You</h2>
-    <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem velit aperiam, unde aliquid at similique!</h4>
+    <h4>Finding an ideal student home can be a complex and challenging task, our expert advisors are at hand to assist you and ensure you find your perfect student home!</h4>
     <hr>
     <a href="{% url 'listings' %}" class="btn btn-secondary text-white btn-lg">View Our Featured Listings</a>
   </section>
