--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -4,7 +4,7 @@
 
 {% block branding %}
 <h1 id="head">
-    <img src="{%  static 'img/logo.png' %}" alt="Bath Student Homes" height = "50" width="80" class="brand_img"> Admin Area 
+    <img src="{%  static 'img/logo.png' %}" alt="Bath Student Homes" height = "50" width="80" class="brand_img"> Bath Student Homes Admin Area 
 </h1>    
 {% endblock %}
 {% block extrastyle %}
